# Cpp-Channel

./: .gitignore  CMakeLists.txt  Channel.hpp  LICENSE  README.md  example.cpp
.github/workflows/: cmake.yaml
benchmark/: CMakeLists.txt  benchmark.cmake  benchmark.cpp
tests/: CMakeLists.txt  gtest.cmake  test.cpp
